add RootNode