@@ -31,6 +31,8 @@
                 <version>3.0.0</version>
                 <configuration>
                     <argLine>--add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
